kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: restaurant-template
  labels:
    app: restaurant-template

spec:
  replicas: 1

  selector:
    matchLabels:
      app: restaurant-template

  template:
    metadata:
      labels:
        app: restaurant-template

    spec:
      containers:
        - name: restaurant-template
          image: ghcr.io/linkmush/restaurant-template:1.0

          ports:
            - name: http
              containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

      imagePullSecrets:
        - name: ghcr-secret
