kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: restaurant-service
  namespace: restaurant-dev

  labels:
    # Identifierar vilken applikation Service-resursen tillhör.
    # Labeln används för organisering och filtrering av Service-resurser.
    #
    # Denna label styr inte vilka pods som får trafik.
    # Det gör i stället labels under spec.selector.
    app: restaurant-template

    # Märker själva Service-resursen som tillhörande dev-miljön.
    # Labeln används för organisering, filtrering och framtida policies.
    #
    # Den påverkar inte Service-resursens trafikstyrning.
    #
    # Exempel:
    # kubectl get services -n restaurant-dev -l environment=dev
    environment: dev

spec:
  # ClusterIP skapar en intern IP-adress för Service-resursen.
  # Service-resursen kan nås från andra resurser inne i klustret,
  # men exponeras inte direkt utanför klustret.
  #
  # Extern trafik kommer i detta fall via:
  # Traefik → Ingress → Service → Pod
  type: ClusterIP

  selector:
    # Service-resursen skickar endast trafik till pods som har
    # samtliga labels som anges i denna selector.
    #
    # Poddarna måste därför ha:
    # app=restaurant-template
    # environment=dev
    #
    # Dessa labels finns under:
    # Deployment.spec.template.metadata.labels
    app: restaurant-template
    environment: dev

  ports:
    # Ett beskrivande namn på Service-porten.
    # Namngivna portar gör konfigurationen tydligare och kan senare
    # refereras till från andra Kubernetes-resurser.
    - name: http

      # Anger att kommunikationen använder TCP.
      # HTTP-trafik skickas normalt över TCP.
      protocol: TCP

      # Porten som Service-resursen lyssnar på inne i klustret.
      #
      # Ingress-resursen skickar trafik till:
      # restaurant-service:80
      port: 80

      # Porten på de valda poddarna som trafiken skickas vidare till.
      #
      # Detta motsvarar containerPort 80 i Deployment-resursen.
      targetPort: 80
