kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: restaurant-ingress
  namespace: restaurant-dev
  labels:
    app: restaurant-template
    # environment=dev.(dev, test, prod)
    environment: dev # Märker Ingress-resursen som dev; påverkar inte trafikstyrningen.

spec:
  ingressClassName: traefik

  rules:
    - host: linkmush.template

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: restaurant-service
                port:
                  number: 80
